[gd_scene load_steps=5 format=3 uid="uid://ca07uje8so24"]

[ext_resource type="Script" path="res://Scenes/Cards/BoughtPermanentCards/bought_permanent_card_template.gd" id="1_f3kci"]
[ext_resource type="Texture2D" uid="uid://b6je51pem3kfr" path="res://Art/Cards/CardBase.png" id="2_2t6sl"]
[ext_resource type="Texture2D" uid="uid://bspwm6xf767im" path="res://Art/Cards/PermanentCards/LevelDisplay.png" id="3_h85rx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ecqog"]
size = Vector2(102, 155)

[node name="BoughtPermanentCardTemplate" type="Node2D"]
script = ExtResource("1_f3kci")

[node name="CardSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_2t6sl")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_ecqog")

[node name="LevelDisplay" type="Sprite2D" parent="."]
position = Vector2(0, 104)
texture = ExtResource("3_h85rx")

[node name="Label" type="Label" parent="LevelDisplay"]
offset_left = -20.0
offset_top = -11.0
offset_right = 20.0
offset_bottom = 12.0

[node name="SellMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -59.0
offset_top = -41.0
offset_right = 60.0
offset_bottom = 40.0

[node name="DeleteBackground" type="ColorRect" parent="SellMenu"]
layout_mode = 0
offset_left = -1.0
offset_top = -8.0
offset_right = 119.0
offset_bottom = 29.0
color = Color(0.396078, 0.396078, 0.396078, 0.745098)

[node name="DeleteLabel" type="Label" parent="SellMenu/DeleteBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Delete Card?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeleteButton" type="Button" parent="SellMenu"]
layout_mode = 0
offset_left = -1.0
offset_top = 29.0
offset_right = 59.0
offset_bottom = 60.0
text = "Yes"

[node name="CancelButton" type="Button" parent="SellMenu"]
layout_mode = 0
offset_left = 59.0
offset_top = 29.0
offset_right = 119.0
offset_bottom = 60.0
text = "Cancel"

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="pressed" from="SellMenu/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="SellMenu/CancelButton" to="." method="_on_cancel_button_pressed"]
